# BSc-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ANSI_codes.h  Console.h  Drawing.h  Experiment.h  Experiments.h  Game.h  Input.h  Network.h  SGCB_Config.h.in  Strategy.h  Update.h
lib_network/include/: Network.h  Strategy.h
lib_network/src/: CMakeLists.txt  Network.cpp  Strategy.cpp
python/: AnimationModule.py  Figtodat.py  GraphModule.py  StrategiesModule.py  TestImport.py
src/: CMakeLists.txt  Console.cpp  Drawing.cpp  Experiment.cpp  Experiments.cpp  Game.cpp  Input.cpp  Network.cpp  Strategy.cpp  Update.cpp  main.cpp
